--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.19"
+    "jsonwebtoken": "^8.5.1"
   }
 }
